feat: convert to pure module